--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   lottie: ^3.0.0
   page_transition: ^2.1.0
   flutter_spinkit: ^5.2.1
+  equatable: ^2.0.5
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
