--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
- 
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   shimmer: ^3.0.0
@@ -43,10 +38,6 @@ dependencies:
   animations: ^2.0.11
   dropdown_button2: ^1.7.0
   flutter_colorpicker: ^1.1.0
-  
-  
-
-
   provider: ^6.1.2
   http: ^0.13.6
   carousel_slider: ^4.2.1
@@ -74,6 +65,9 @@ dependencies:
   flutter_spinkit: ^5.2.1
   equatable: ^2.0.5
   animated_text_kit: ^4.2.2
+  exif: ^3.3.0
+  #panorama_viewer: ^1.0.3
+  
 
 dev_dependencies:
   flutter_test:
@@ -99,15 +93,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      
-      - assets/images/welcome-one.png
-      - assets/images/welcome-two.png
-      - assets/images/welcome-three.png
       - assets/images/
-      - assets/images/image2.png
-      - assets/images/image3.png
-      - assets/images/image1.png
-      - assets/images/panoramic_image2.jpg
       - assets/icon/
       - assets/Lottie/
       
